main file rename

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,14 @@
 add_definitions(-Wall -pedantic -O2 -std=c++0x)
 
 set(SOURCES
-    serverThread.cpp
+    web-server.cpp
     server.cpp
     thread.cpp
 )
 
 set(LIBS
-    pthread
+    #pthread
 )
 
-add_executable(serverThread ${SOURCES})
-target_link_libraries(serverThread ${LIBS})
+add_executable(web-server ${SOURCES})
+target_link_libraries(web-server ${LIBS})
